--- a/infra-templates/container-crontab/0/rancher-compose.yml
+++ b/infra-templates/container-crontab/0/rancher-compose.yml
@@ -1,8 +1,8 @@
 .catalog:
   name: "Rancher Container Crontab"
-  version: "v0.0.0"
+  version: "v0.3.1"
   description: "Service that will start, stop or restart containers"
-  minimum_rancher_version: v1.6.15-rc1
+  minimum_rancher_version: v1.5.0
   questions:
     - variable: metrics
       type: enum
