--- a/infra-templates/container-crontab/0/rancher-compose.yml
+++ b/infra-templates/container-crontab/0/rancher-compose.yml
@@ -1,5 +1,5 @@
 .catalog:
-  name: "Rancher Container Crontab"
+  name: "Rancher Container CrontabFR"
   version: "v0.3.1"
   description: "Service that will start, stop or restart containers"
   minimum_rancher_version: v1.5.0
